# src/main/kotlin/com/alex/simple/process/domain/Entity.kt
@@ -1,5 +1,7 @@
 package com.alex.simple.process.domain
 
+import com.alex.simple.process.api.dto.CreateProcessDTO
+import com.alex.simple.process.api.dto.ProcessDTO
 import com.alex.simple.process.jooq.tables.pojos.JProcesses
 import com.alex.simple.process.service.ContextMapper
 import java.util.*
@@ -15,5 +17,19 @@ data class Process(
         processType = record.processType,
         context = mapper.deserialize(record.context),
         count = record.retryCount
+    )
+
+    constructor(dto: ProcessDTO) : this(
+        uuid = dto.id ?: UUID.randomUUID(),
+        processType = "new",
+        context = mapOf<String, String>(),
+        count = 5
+    )
+
+    constructor(dto: CreateProcessDTO) : this(
+        uuid = UUID.randomUUID(),
+        processType = "new",
+        context = mapOf<String, String>(),
+        count = 5
     )
 }
